# PTGPU

./: CMakeLists.txt  main.cpp
ext/glew/: .README.md.swp
ext/imgui/: CMakeLists.txt  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_stdlib.cpp  imgui_widgets.cpp
ext/imgui/examples/: imgui_impl_allegro5.cpp  imgui_impl_dx10.cpp  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_glfw.cpp  imgui_impl_glut.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_impl_win32.cpp
ext/imgui/examples/example_allegro5/: main.cpp
ext/imgui/examples/example_emscripten/: main.cpp
ext/imgui/examples/example_glfw_opengl2/: main.cpp
ext/imgui/examples/example_glfw_opengl3/: main.cpp
ext/imgui/examples/example_glfw_vulkan/: main.cpp
ext/imgui/examples/example_glut_opengl2/: main.cpp
ext/imgui/examples/example_marmalade/: main.cpp
ext/imgui/examples/example_sdl_directx11/: main.cpp
ext/imgui/examples/example_sdl_opengl2/: main.cpp
ext/imgui/examples/example_sdl_opengl3/: main.cpp
ext/imgui/examples/example_sdl_vulkan/: main.cpp
ext/imgui/examples/example_win32_directx10/: main.cpp
ext/imgui/examples/example_win32_directx11/: main.cpp
ext/imgui/examples/example_win32_directx12/: main.cpp
ext/imgui/examples/example_win32_directx9/: main.cpp
ext/imgui/misc/cpp/: imgui_stdlib.cpp
ext/imgui/misc/freetype/: imgui_freetype.cpp
include/: CLCompiler.h  CLTracer.h  CLUtil.h  Display.h  InteractiveCamera.h  RenderInfoListener.h  RenderPlane.h  Renderer.h  Scene.h
src/: CLCompiler.cpp  CLTracer.cpp  CLUtil.cpp  Display.cpp  InteractiveCamera.cpp  RenderPlane.cpp  Renderer.cpp  Scene.cpp  apple.c  main.cpp
src/kernels/: camera.cl  math.cl  pathtracer.cl  ray.cl  scene.cl  spheres.cl  triangles.cl
src/shaders/: shader.frag  shader.vert
src/test/: main.cl  other.cl
